# mysql-tarantool-replication

./: .gitmodules  CMakeLists.txt  LICENSE  README  build.sh  buildrpm.sh  dbreader.cpp  dbreader.h  main.cpp  queue.h  rc.replicatord  replicatord.cfg  replicatord.service  replicatord.spec  replicatord.yml  serializable.h  test_schema.lua  tpwriter.cpp  tpwriter.h
